# ComfyUI_Batch_from_AIMMS

./: .gitignore  README.md  __init__.py  batch_from_aimms_node.py  batch_from_csv_node.py  pyproject.toml
docs/: BatchFromAIMMS.md  BatchFromAIMMS_full.md  BatchFromCSV.md  BatchFromCSV_full.md  shots_db_schema.md
web/js/: aimms_help.js
