[project]
name = "ComfyUI_Batch_from_AIMMS"
version = "2.1.0"
description = "ComfyUI batch execution tools for AIMMS workflows — includes CSV-based and SQLite-based batch nodes."
license = {text = "GPL-3.0-or-later"}

[project.urls]
Repository = "https://github.com/mdkberry/ComfyUI_Batch_from_AIMMS"
Homepage = "https://github.com/mdkberry/ComfyUI_Batch_from_AIMMS"
Documentation = "https://github.com/mdkberry/ComfyUI_Batch_from_AIMMS#readme"
Changelog = "https://github.com/mdkberry/ComfyUI_Batch_from_AIMMS/releases"


